# final-project-team2

./: .gitignore  Makefile.am  README.md  build_code.sh  configure.ac  heat-input-bad-N.txt  heat-input-bad-dim.txt  heat-input-bad-order.txt  heat-input-good-1-4.txt  heat-input-good-2-4.txt  heat-input-good-nopetsc-1-10.txt  heat-input-good-nopetsc-2-100.txt  heat-input-good-other.txt  heat-input-good-petsc-1-10.txt  heat-input-good-petsc-2-100.txt  heat-input-good.txt  heat-input.txt
.github/workflows/: ci_testing.yaml
Docker/: docker_make.sh
cse380_project/: main.tex
doc/: citations.bib
m4/: coverage_snippet  gsl.m4
output/: Gauss-Seidel_1D_2_order_N_20  Gauss-Seidel_1D_2_order_N_80  Gauss-Seidel_1D_4_order_N_10  Gauss-Seidel_1D_4_order_N_160  Gauss-Seidel_1D_4_order_N_20  Gauss-Seidel_1D_4_order_N_40  Gauss-Seidel_1D_4_order_N_80  Gauss-Seidel_2D_2_order_N_12  Gauss-Seidel_2D_2_order_N_40  Gauss-Seidel_2D_2_order_N_80  Gauss-Seidel_2D_4_order_N_10  Gauss-Seidel_2D_4_order_N_160  Gauss-Seidel_2D_4_order_N_20  Gauss-Seidel_2D_4_order_N_40  Gauss-Seidel_2D_4_order_N_80  Jacobi_1D_2_order_N_10  Jacobi_1D_2_order_N_14  Jacobi_1D_2_order_N_160  Jacobi_1D_2_order_N_40  Jacobi_2D_2_order_N_160  Jacobi_2D_2_order_N_20  no_petsc_2d_100.h5  petsc_2d_100.h5
src/: Makefile.am  fd_solver.cpp  fd_solver.h  integration.h  iterative_methods.h  main.cpp  matrix.h  oned_solver.cpp  oned_solver.h  output.cpp  output.h  parsing.cpp  parsing.h  test_matrix.cpp  twod_solver.cpp  twod_solver.h  utils.hpp
tests/: Makefile.am  run_tests.sh
(+2 files in other folders)
